circles not aligning correctly fix.

--- a/src/index.css
+++ b/src/index.css
@@ -170,9 +170,7 @@ main div section:nth-of-type(2)::-webkit-scrollbar {
   display: none; /* Hide scrollbar in Webkit browsers */
 }
 
-main div section:nth-of-type(2) div {
-  height: 100%;
-}
+
 
 h3 {
   font-size: 2vmin;
